# junior-robotics-ops-cv-nav2-challenge

./: .gitignore  .gitmodules  README.md
block_a_cv/: yolov9_compat_patches.diff
block_a_cv/docs/: data_preparation.md  metrics.md
block_a_cv/scripts/: dedupe_val_against_train.py  make_leakage_dataset.py  prepare_dataset.py  summarize_run.py  train_baseline.sh  train_leakage.sh  vis_samples.py
block_b_ros2_ws/src/cv_yolov9_detector_cpp/: CMakeLists.txt  package.xml
block_b_ros2_ws/src/cv_yolov9_detector_cpp/include/cv_yolov9_detector_cpp/: detector.hpp  onnx_runtime_detector.hpp  telemetry.hpp  telemetry_logger.hpp  vision_msgs_converter.hpp
block_b_ros2_ws/src/cv_yolov9_detector_cpp/scripts/: play_bag.sh  record_bag.sh
block_b_ros2_ws/src/cv_yolov9_detector_cpp/src/: onnx_runtime_detector.cpp  telemetry_logger.cpp  vision_msgs_converter.cpp  yolov9_detector_node.cpp
block_c_nav2_ws/src/block_c_mission/: CMakeLists.txt  package.xml
block_c_nav2_ws/src/block_c_mission/launch/: block_c.launch.py  tb3_cone_world.launch.py
block_c_nav2_ws/src/block_c_mission/models/cone_poster/: model.config  model.sdf
block_c_nav2_ws/src/block_c_mission/models/cone_poster/materials/scripts/: material.script
block_c_nav2_ws/src/block_c_mission/params/: tb3_bridge_with_camera.yaml
block_c_nav2_ws/src/block_c_mission/src/: event_monitor_node.cpp
block_c_nav2_ws/src/block_c_mission/worlds/: tb3_cone_poster.world
