<?xml version="1.0"?>
<package format="3">
  <name>block_c_mission</name>
  <version>0.0.1</version>
  <description>Block C: TB3 Gazebo + Nav2 waypoints + vision event monitor</description>

  <maintainer email="victorjt@TODO.local">victorjt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vision_msgs</depend>

  <!-- Launch runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>